--- a/toc.html
+++ b/toc.html
@@ -13,10 +13,10 @@
           
           <ul class="nav level1">
                 <li>
-                    <a href="articles/intro.html" name="articles/toc.html" title="Articles">Articles</a>
+                    <a href="articles/Import%20dokument%C3%B3w%20ewidencji.html" name="articles/toc.html" title="Instrukcja">Instrukcja</a>
                 </li>
                 <li>
-                    <a href="api/index.html" name="api/toc.html" title="Api Documentation">Api Documentation</a>
+                    <a href="api/index.html" name="api/toc.html" title="Dokumentacja techniczna">Dokumentacja techniczna</a>
                 </li>
           </ul>
       </div>
